Table User {
  id integer [primary key]
  username varchar
  email varchar
  groups varchar [note: "Reviewer, Organizer"]
}

Table Tag {
  id integer [primary key]
  name varchar
}

Enum proposal_status {
  Draft
  Review_Requested
  Archived
}

Table Proposal {
  id integer [primary key]
  author_id integer [ref: > User.id]
  title varchar
  abstract text
  private_notes text
  status proposal_status [note: "Indexed"]
  created_at timestamp
  updated_at timestamp
}

Table ProposalTag {
  proposal_id integer [ref: > Proposal.id]
  tag_id integer [ref: > Tag.id]
}

Table Review {
  id integer [primary key]
  proposal_id integer [ref: > Proposal.id]
  reviewer_id integer [ref: > User.id]
  score integer [note: "-1, 0, 1"]
  feedback text
  created_at timestamp
}

Table Selection {
  id integer [primary key]
  organizer_id integer [ref: > User.id]
  proposal_id integer [ref: > Proposal.id]
  created_at timestamp
}
